--- a/main.kv
+++ b/main.kv
@@ -1,33 +1,66 @@
+<MyQuestionWidget@Label>:
+    background_color: (0, 1, 1)
+    font_size: 20
+    text_size: self.width, None  
+    size_hint: (1, 1)
+
+<MyButton@Button>:
+    font_size: 20
+    size_hint: (1, 1)
+    disabled: True
+    border_radius: 100
+    shadow_color: (1, 0.2, 0.2)
+    background_color: (0.5, 0.5, 1)
+
 <MainWindow>:
     orientation: 'vertical'
     spacing: 20
 
-    ScrollView:
-        size_hint: (1, 0.6)
+    RecycleView:
+        id: list_view
+        size_hint: (1, 0.1)
+        viewclass: "MyQuestionWidget"
 
-        BoxLayout:
-            id: table
+        RecycleBoxLayout:
+            data: root.data
             orientation: 'vertical'
 
     BoxLayout:
         orientation: 'horizontal'
-        size_hint: (1, 0.2)
+        size_hint: (1, 0.02)
+        padding: 10
+        spacing: 5
+        align: 'center'
+        valign: 'center'
 
         Label:
             text: "Enunciado:"
+            font_size: 30
+            pos_hint: {'x': 0, 'y': 0}
 
         TextInput:
-            multiline: True
+            id: text_input
+            multiline: False
+            font_size: 30
+            pos_hint: {'x': 0, 'y': 0}
+            on_text: root.update_table()
 
     BoxLayout:
         orientation:'horizontal'
-        size_hint: (1, 0.1)
+        size_hint: (1, 0.05)
         padding: 10
         spacing: 5
 
-        Button: 
+        MyButton: 
+            id: btn_remove_question
             text: "REMOVER QUESTÃO"
-        Button:
+
+        MyButton:
+            id: btn_add_question
             text: "ADICIONAR QUESTÃO"
-        Button:
+            on_press: root.add_question()
+
+        MyButton:
+            id: btn_generate_html
             text: "GERAR HTML"
+            # on_press: root.add_question()
