--- a/ui/question.ui
+++ b/ui/question.ui
@@ -94,6 +94,9 @@ QPushButton:pressed {
         </item>
         <item>
          <widget class="QPushButton" name="btn_add_ask">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>Adicionar</string>
           </property>
@@ -102,7 +105,7 @@ QPushButton:pressed {
        </layout>
       </item>
       <item>
-       <widget class="QTableWidget" name="tablet"/>
+       <widget class="QListWidget" name="tablet"/>
       </item>
      </layout>
     </widget>
@@ -111,6 +114,9 @@ QPushButton:pressed {
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="insert_ask">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Registrar</string>
        </property>
@@ -132,7 +138,6 @@ QPushButton:pressed {
   <tabstop>ask</tabstop>
   <tabstop>btn_add_ask</tabstop>
   <tabstop>insert_ask</tabstop>
-  <tabstop>tablet</tabstop>
   <tabstop>cancel</tabstop>
  </tabstops>
  <resources/>
